# legged_control_pub

./: .gitignore  README.md  plotJugglerLayout.xml  plotJugglerLayoutControls.xml  plotJugglerLayoutOdom.xml  useful_cmds.txt
.devcontainer/: Dockerfile_a1  Dockerfile_go1  devcontainer.json
config/: viz.rviz
gait_scheduler/: CMakeLists.txt  package.xml
gait_scheduler/scripts/: goal_pub.py  scheduler.py
legged_controllers/: CMakeLists.txt
legged_controllers/config/: gait.info  rosjoy_key_map.yaml  task.info
legged_controllers/config/go1/: task.info
legged_controllers/include/legged_controllers/: LeggedController.h  ROSJoyProcessor.hpp  TargetTrajectoriesPublisher.h
legged_controllers/launch/: load_controller.launch
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/src/: LinearKalmanFilter.cpp
legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch
legged_examples/legged_unitree/legged_unitree_description/urdf/: go1.urdf  go1_payload.urdf
legged_examples/legged_unitree/legged_unitree_description/urdf/a1/: const.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/go1/: const.xacro
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_examples/legged_unitree/legged_unitree_hw/config/: go1.yaml
legged_examples/legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h
legged_examples/legged_unitree/legged_unitree_hw/launch/: legged_unitree_hw.launch
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp
legged_examples/legged_unitree/legged_unitree_mujoco/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_mujoco/include/legged_unitree_mujoco/: legged_unitree_mujoco.h
legged_examples/legged_unitree/legged_unitree_mujoco/src/: legged_unitree_mujoco.cpp
legged_gazebo/worlds/: box_world.world
legged_hw/src/: LeggedHWLoop.cpp
legged_mujoco/: CMakeLists.txt  package.xml
legged_mujoco/include/legged_mujoco/: LeggedHWMujoco.h
legged_mujoco/model/: common.xml
legged_mujoco/model/go1/: go1_mppi.xml  go1_scene_mppi.xml
legged_mujoco/src/: LeggedHWMujoco.cpp
mocap_optitrack/config/: mocap.yaml
notebooks/: walking_debugging.ipynb
notebooks/.ipynb_checkpoints/: walking_debugging-checkpoint.ipynb
scripts/: MPPI_mjx.ipynb  controller_from_log.py  controller_test.py  dev_mppi.py  generate_terrain.py  mppi_controller.py  pd_controller_test.py  time_mppi.py
scripts/.ipynb_checkpoints/: MPPI_pd_debugging-checkpoint.ipynb
scripts/control/: MUJOCO_LOG.TXT  Quadruped_JAX.ipynb  Untitled.ipynb  lqr.py  mppi.py  mppi_gait.py  mppi_gait_gpu.py  mppi_gait_mujoco.py  mppi_gpu.py  pd.py
scripts/control/.ipynb_checkpoints/: MPPI_MP-checkpoint.ipynb  MPPI_NP-checkpoint.ipynb  MPPI_debugging-checkpoint.ipynb  MPPI_gait_dev-checkpoint.ipynb  Quadruped_JAX-checkpoint.ipynb  Untitled-checkpoint.ipynb
scripts/control/configs/: lqr.yml  mppi.yml  mppi_bp.yml  mppi_gait_config.yml  mppi_gait_config_box_gazebo.yml  mppi_gait_config_box_hw.yml  mppi_gait_config_stairs.yml  mppi_gait_config_walk.yml  mppi_gait_config_walk_gazebo.yml  mppi_gait_config_walk_hw.yml  mppi_hw_bp.yml  mppi_hw_stable_not_walking.yml  mppi_mujoco.yml  mppi_tuning_gazebo.yml  mppi_two.yml  mppi_two_gazebo.yml  mppi_two_gazebo_bp.yml  mppi_working.yml
scripts/control/gait_scheduler/: config.py  gait_controller.py  kinematics.py  tasks.py  utils.py
scripts/gaits/: Calculate gait.ipynb  waking_gait_SLOW.tsv  walking_gait.tsv  walking_gait_50.tsv  walking_gait_FASTER_HIGHER_25.tsv  walking_gait_HIGH.tsv  walking_gait_NORMAL.tsv  walking_gait_NORMAL_HIGH.tsv  walking_gait_NORMAL_HIGHER.tsv  walking_gait_NORMAL_HIGHER_25.tsv  walking_gait_NORMAL_SLOW.tsv  walking_gait_OPEN.tsv  walking_gait_S10ms_O15ms_H10cm.tsv  walking_gait_S10ms_O15ms_H20cm.tsv  walking_gait_S30ms_O40ms_H10cm.tsv  walking_gait_SLOW.tsv  walking_gait_SLOW_HIGHER.tsv  walking_gait_raibert.tsv  walking_gait_raibert_0.tsv  walking_gait_raibert_0_0_10cm.tsv  walking_gait_raibert_0_0_15cm.tsv  walking_gait_raibert_0_1.tsv  walking_gait_raibert_0_10.tsv  walking_gait_raibert_0_1_10cm.tsv  walking_gait_raibert_0_1_15.tsv  walking_gait_raibert_0_1_15cm.tsv  walking_gait_raibert_0_2.tsv  walking_gait_raibert_0_2_1.tsv  walking_gait_raibert_0_2_10.tsv  walking_gait_raibert_0_2_10cm.tsv  walking_gait_raibert_0_2_15.tsv  walking_gait_raibert_0_2_15cm.tsv  walking_gait_raibert_0_2_22.tsv  walking_gait_raibert_0_5_10cm.tsv  walking_gait_raibert_0_5_15.tsv  walking_gait_raibert_0_5_15cm.tsv  walking_gait_raibert_0_5_22.tsv  walking_gait_raibert_slow_0_0.tsv  walking_gait_raibert_slow_0_1.tsv  walking_gait_raibert_slow_0_2.tsv  (+1 more)
scripts/gaits/src/: inverse_kinematics.cpp  inverse_kinematics.hpp  main.cpp  my_robot_app
scripts/interface/: simulator.py
scripts/models/go1/: go1.xml  go1_filter.xml  go1_fixed_base.xml  go1_jax_no_collision_box.xml  go1_jax_no_collision_box_reduced.xml  go1_mppi.xml  go1_mppi_cf.xml  go1_mppi_pyr.xml  go1_opt.xml  go1_opt_pd.xml  go1_scene_jax_no_collision.xml  go1_scene_jax_no_collision_reduced.xml  go1_scene_mppi_cf.xml  go1_scene_mppi_cf_stairs.xml  go1_scene_mppi_pyr_box.xml  go1_scene_mppi_pyr_box_hw.xml  go1_scene_mppi_stairs.xml  go1_simulator.xml  scene_fixed_base.xml  scene_opt.xml  scene_opt_pd.xml  task_filter_imu.xml  task_filter_mocap.xml  task_simulate.xml
scripts/models/quadrotor/: task.xml
scripts/mujoco_logs/: walking_straight.tsv
scripts/rosbags/: test.bag
